Bug #18975
osd: pg log split does not rebuild index for parent or child
Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
kraken,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Related issues
History
#1 Updated by Sage Weil about 4 years ago
#2 Updated by Sage Weil about 4 years ago
- Status changed from New to Pending Backport
#3 Updated by Alexey Sheplyakov about 4 years ago
- Copied to Backport #19314: jewel: osd: pg log split does not rebuild index for parent or child added
#4 Updated by Alexey Sheplyakov about 4 years ago
- Copied to Backport #19315: kraken: osd: pg log split does not rebuild index for parent or child added
#5 Updated by Nathan Cutler about 4 years ago
- Status changed from Pending Backport to Resolved